<resources>
    <string name="app_name">A2zkaj for All Experts</string>
    <string name="description">Description</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="app_splace_name">A2zkaj</string>
    <string name="app_splace_experts">Experts</string>
    <string name="server_lable_header">Sorry!</string>
    <string name="server_ok_lable_header">Ok</string>
    <string name="action_ok">OK</string>
    <string name="lbel_alert_inform_msg">A2zkaj For All Partner</string>
    <string name="lbel_alert_inform2_msg">Please visit our website to register.Thank you</string>
    <string name="action_loadings_sucess">Success</string>
    <string name="action_loading">Loading..</string>
    <string name="no_inetnet_label">you are offline.please check your mobile data or Wifi connection</string>
    <string name="no_inetnet_whoops_label">Whoops! Check Connection</string>
    <string name="lbel_notification">Message</string>
    <string name="lbel_notification_ok">Ok</string>
    <string name="label_sure_go_offline">Are you sure you want go offline?</string>
    <string name="label_pushnotification_canceled">Sorry</string>
    <string name="label_pushnotification_ride_completed">Thanks</string>
    <string name="label_pushnotification_cashreceived">Success</string>
    <string name="label_pushnotification_newjob">New Job</string>
    <string name="label_pushnotification_admin_changed_your_availability">Admin Changed Your Availability</string>
    <string name="label_pushnotification_your_ride_has_been_completed">your ride has been completed</string>
    <string name="action_sorry">Sorry</string>
    <string name="admin_notification">Admin Notification</string>
    <string name="availability_change">Admin Changed Your Availability</string>
    <string name="partially_change">Payment</string>
    <string name="loginpage_edittext_lable_email_hint">Phone or Email</string>
    <string name="loginpage_edittext_lable_password_hint">Password</string>
    <string name="loginpage_textview_lable">Login</string>
    <string name="loginpage_facebook_textview_lable">Login with facebook</string>
    <string name="mainpage_login_textview_lable">Sign In</string>
    <string name="mainpage_signup_textview_lable">Register</string>
    <string name="loginpage_signup_textview_lable">SignUp</string>
    <string name="loginpage_here_textview_lable">here</string>
    <string name="mainpage_logineithemail_textview_lable">SIGN IN</string>
    <string name="mainpage_logineithemail_textview_success_lable">Logged in sucessfully</string>
    <string name="loginpage_edittext_lable_notaccouvt_Textview">Not one of us yet? </string>
    <string name="mainpage_logineithemail_validate_lable">Phone or Email can\'t be empty</string>
    <string name="mainpage_login_password_validate_lable">Password can\'t be empty</string>
    <string name="mainpage_login_signin_lable">signIn</string>
    <string name="action_no_internet_title">No Internet!</string>
    <string name="action_no_internet_swipe_down">Swipe Down To Refresh</string>
    <string name="action_no_internet_message">You are offline please check your internet connection</string>
    <string name="drawer_list_home_label">Home</string>
    <string name="drawer_list_myjobs_label">My Jobs</string>
    <string name="drawer_list_profile_label">My Profile</string>
    <string name="drawer_list_chat_label">Chat</string>
    <string name="drawer_list_banking_label">Account Details</string>
    <string name="drawer_list_signout_label">Log Out</string>
    <string name="drawer_list_changepassword_label">Change Password</string>
    <string name="aboutus">About Us</string>
    <string name="UserName">UserName</string>
    <string name="navigation_label_transactions">Transactions</string>
    <string name="navigation_label_notification">Notifications</string>
    <string name="navigation_label_review">Reviews</string>
    <string name="activity_label_review_images">Review Image</string>
    <string name="activity_navigation_menu_label_no_notifications_found">Currently no notifications found</string>
    <string name="activity_navigation_menu_label_no_reviews_found">Currently no reviews found</string>
    <string name="activity_navigation_menu_label_no_transaction_found">Currently no transaction found</string>
    <string name="activity_navigation_menu_label_no_messages_found">Currently no messages found</string>
    <string name="chat_page_label_online">Online</string>
    <string name="chat_page_label_offline">Offline</string>
    <string name="chat_page_label_typing">typing...</string>
    <string name="chat_page_label_typing_without_dots">typing</string>
    <string name="chat_page_label_message_cannot_send">Can\'t send message right now,the user is in offline</string>
    <string name="chat_page_label_server_error">Failed to connect to server.Try again later.</string>
    <string name="warning">This chat room is for A2zkajForAll business discussion only. Any use other than the primary purpose is prohibited.Tap for more info</string>
    <string name="warning1">This chat room is for A2zkajForAll business discussion only. Any use other than the primary purpose is prohibited. Especially sending adverts, sexual content or abuse of the other party right. Admin goes through all chat content and attachments at all time. Defaulter are punishable under Indian Law.</string>
    <string name="chat_message_service_chat_user">Chat message from user</string>
    <string name="service_request_unable_fetch_data">Unable to fetch data from server</string>
    <string name="service_request_auth_failure_error">AuthFailureError</string>
    <string name="service_request_server_error">ServerError</string>
    <string name="service_request_no_internet">No Internet Connection</string>
    <string name="service_request_parse_error">ParseError</string>
    <string name="logging_in">Logging in..</string>
    <string name="loading_in">Loading..</string>
    <string name="alert_label_title">Sorry!</string>
    <string name="alert_nointernet">No Internet Connection</string>
    <string name="alert_servererror">Error</string>
    <string name="dialog_rating">Rating..</string>
    <string name="dialog_cancelling">Cancelling</string>
    <string name="action_gettinginfo">Getting info..</string>
    <string name="action_saving">Saving..</string>
    <string name="action_updating">Updating..</string>
    <string name="splash_updating">Location Updating..</string>
    <string name="job_summery">Job Summary</string>
    <string name="action_logging_out">Signing Out</string>
    <string name="plumbal_home_label">home_newleads_header_label</string>
    <string name="plumbal_myjobs_label">My jobs</string>
    <string name="plumbal_statistes_label">Statistics</string>
    <string name="plumbal_support_label">Support</string>
    <string name="statistes_page_header_earnings_stats">Earnings Stats</string>
    <string name="statistes_page_header_job_stats">Job Stats</string>
    <string name="home_header_label">a2zkaj</string>
    <string name="home_my_jobs_header_label">MY JOBS</string>
    <string name="home_my_jobsdetail_header_label">JOB</string>
    <string name="home_newleads_header_label">New Leads</string>
    <string name="home_location_header_label">LOCATION</string>
    <string name="home_cancelreason_header_label">CANCEL JOB</string>
    <string name="moreinfo">More Info</string>
    <string name="myjob_filter">FILTER</string>
    <string name="jobs_header_notavailable_label">Jobs not available</string>
    <string name="jobs_orderid_label">Job Id :</string>
    <string name="jobs_notavailable_label">You have 0 credits left.please recharge</string>
    <string name="jobs_notavailable_info_label">You dont have any leads as your profile is not live In order to go live,your category needs to be listed and profile needs to be complete.To enquire about approval status send email to a2zkaj.com</string>
    <string name="jobs_notavailable_tip_header_label">Tip:</string>
    <string name="jobs_notavailable_tipdetail_label">Always keep your profile up to date to benefit most out of a2zkaj For All Partner</string>
    <string name="jobs_notavailable_gotoprofile_label">Click here to edit your profile</string>
    <string name="jobs_ongoing_jobs_notavailable_label">You Do Not Have Any Open Jobs</string>
    <string name="jobs_converted_jobs_notavailable_label">You Do Not Have Any Completed Jobs</string>
    <string name="jobs_cancelled_jobs_notavailable_label">You Do Not Have Any Cancelled Jobs</string>
    <string name="aboutus_lable_header_textview">ABOUT US</string>
    <string name="aboutus_lable_poweredby_textview">POWERED BY :</string>
    <string name="aboutus_lable_company_textview">A2zkaj For All</string>
    <string name="aboutus_lable_version_code_textview">V1.5</string>
    <string name="aboutus_lable_moreinfo_textview">More Info</string>
    <string name="aboutus_lable_aboutus_description_textview">A2zkaj For All - Refer Website..</string>
    <string name="sorting_layout_TXT_lable_sorting">Sorting</string>
    <string name="sorting_layout_TXT_lable_name">Name</string>
    <string name="sorting_layout_TXT_lable_date">Date</string>
    <string name="sorting_layout_TXT_lable_from">From</string>
    <string name="sorting_layout_TXT_lable_to">To</string>
    <string name="sorting_layout_TXT_lable_OrderBy">OrderBy</string>
    <string name="sorting_layout_TXT_lable_Ascending">Ascending</string>
    <string name="sorting_layout_TXT_lable_Descending">Descending</string>
    <string name="sorting_layout_TXT_lable_Filter_by">Filter By</string>
    <string name="sorting_layout_TXT_lable_Todays_Booking">Today\'s Booking</string>
    <string name="sorting_layout_TXT_lable_Recent_Booking">Recent Booking</string>
    <string name="sorting_layout_TXT_lable_Upcoming_Booking">Upcoming Booking</string>
    <string name="sorting_layout_TXT_lable_Apply">Apply</string>
    <string name="ongoing_detail_date_label">Date :</string>
    <string name="ongoing_detail_time_label">Time :</string>
    <string name="ongoing_detail_more_label">More Info</string>
    <string name="ongoing_detail_cancel_label">Cancel Reason</string>
    <string name="ongoing_detail_canceled_job_label">Job Cancelled</string>
    <string name="ongoing_detail_payment_label">Payment</string>
    <string name="ongoing_detail_jobcompleted_label">Complete Job</string>
    <string name="ongoing_detail_cancelbtn_label">Cancel</string>
    <string name="ongoing_detail_startjob_label">Start job</string>
    <string name="ongoing_detail_arrived_label">Arrived</string>
    <string name="ongoing_detail_startoff_label">Start Off</string>
    <string name="ongoing_detail_accept_label">Accept</string>
    <string name="ongoing_detail_rejectlabel">Reject</string>
    <string name="ongoing_detail_contact">Contact</string>
    <string name="ongoing_detail_chat">Chat</string>
    <string name="ongoing_detail_email">Email</string>
    <string name="ongoing_detail_viewon_maplabel">View on Map</string>
    <string name="action_complete_submit">Submit</string>
    <string name="action_complete_cancel">Cancel</string>
    <string name="edit_profile_otplayout_otp_here">Enter your OTP here</string>
    <string name="edit_profile_otplayout_otp_hint">OTP</string>
    <string name="bepatient">This May Take Few Seconds, Please Do Not Refresh</string>
    <string name="PaymentRequest">Please Wait…… Your Payment Request Has been Sent</string>
    <string name="PleaseWait">Please wait....</string>
    <string name="checkstatus">Check status</string>
    <string name="watting_PaymentRequest">Payment Request</string>
    <string name="action_label_forgotpassword_label">Forgot password?</string>
    <string name="cancel_other_reason_text">Other Reason</string>
    <string name="cancel_other_editttext_reason">Enter the Other Reason</string>
</resources>