<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="280dp"
        android:orientation="vertical"
        android:background="@color/white"
        android:gravity="center_horizontal">

        <com.widget.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/cancel_other_reason_text"
            android:textColor="@color/black_de"
            android:textSize="18dp"
            android:textStyle="bold"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/appmain_color"/>

        <core.Widgets.CustomEdittext
            android:id="@+id/edittext_other_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:hint="@string/cancel_other_editttext_reason"
            android:padding="10dp"
            android:textSize="15dp"
            android:gravity="center"
            android:background="@drawable/edit_other_reason_bg"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center">

            <core.Widgets.CustomButton
                android:id="@+id/submit_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_complete_submit"
                android:textColor="@color/white"
                android:background="@color/appmain_color"/>

            <core.Widgets.CustomButton
                android:id="@+id/cancel_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/action_complete_cancel"
                android:textColor="@color/white"
                android:background="@color/appmain_color"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>