<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_backgroundlayout"
    android:orientation="vertical">


    <FrameLayout
        android:id="@+id/content_frame_lib"
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <!--
        <android.support.v7.widget.Toolbar
            style="@style/Toolbar"
            app:contentInsetStart="0dp">

            <ImageView
                android:id="@+id/guillotine_hamburger"
                style="@style/ImageView.Hamburger"
                android:src="@drawable/ic_menu" />
        </android.support.v7.widget.Toolbar>-->

    <RelativeLayout
        android:id="@+id/layout_home"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:background="@color/appmain_color">

        <ImageView
            android:id="@+id/home_navigation_icon_lists"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:src="@drawable/ic_menu_90" />


    </RelativeLayout>


    <LinearLayout
        android:id="@+id/plumbal_home_layout"
        style="@style/LinearLayout.GuillotineItem"
        android:layout_marginTop="@dimen/guillotine_medium_margin">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/home" />

        <core.Widgets.CanaroTextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/drawer_list_home_label" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/plumbal_myjobs_layout"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_feed" />

        <core.Widgets.CanaroTextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/drawer_list_myjobs_label" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/plumbal_myprofile_layout"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/profile" />

        <core.Widgets.CanaroTextView
            style="@style/TextView.GuillotineItem.Selected"
            android:text="@string/drawer_list_profile_label" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/plumbal_banking_layout"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/banking" />

        <core.Widgets.CanaroTextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/drawer_list_banking_label" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/guillotine_divider_height" />

    <LinearLayout
        android:id="@+id/plumbal_signout_layout"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/logout" />

        <core.Widgets.CanaroTextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/drawer_list_signout_label" />
    </LinearLayout>
</LinearLayout>